# tree-sitter-sparql

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  example.sparql  go.mod  grammar.js  justfile  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-sparql.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_sparql/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSparqlTests/: TreeSitterSparqlTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: clauses.txt  expressions.txt  functions.txt  graph-pattern-not-triples.txt  graph-patterns.txt  property-paths.txt  query.txt  rdf-terms.txt  triple-patterns.txt  update.txt
