[package]
name = "tree-sitter-sparql"
description = "sparql grammar for the tree-sitter parsing library"
version = "0.22.6"
keywords = ["incremental", "parsing", "sparql"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/IoannisNezis/tree-sitter-sparql"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-c2rust = { version = "0.22.6" }

[build-dependencies]
cc = "1.0"
